[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/Status.gd" type="Script" id=1]
[ext_resource path="res://font1/Blanka-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://font1/NIKOLETA.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://font1/Android 101.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 31
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[node name="Status" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -221.5
margin_right = 360.0
margin_bottom = 221.5
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.478431 )

[node name="Gameover" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = -222.0
margin_right = 361.0
margin_bottom = 222.0

[node name="Defeated" type="CenterContainer" parent="Gameover"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -128.0
margin_right = 215.0
margin_bottom = -75.0

[node name="GameOver" type="Label" parent="Gameover/Defeated"]
margin_left = 38.0
margin_right = 406.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "DEFEATED!"

[node name="Restart" type="CenterContainer" parent="Gameover"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = -22.8911
margin_right = 213.819
margin_bottom = 73.1089

[node name="Restart" type="Button" parent="Gameover/Restart"]
margin_left = 159.0
margin_top = 28.0
margin_right = 283.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "RESTART"
flat = true

[node name="Mainmenu" type="CenterContainer" parent="Gameover"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = 26.7109
margin_right = 213.819
margin_bottom = 122.711

[node name="Mainmenu" type="Button" parent="Gameover/Mainmenu"]
margin_left = 152.0
margin_top = 29.0
margin_right = 290.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Main menu"
flat = true

[node name="Quit" type="CenterContainer" parent="Gameover"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = 73.9509
margin_right = 213.819
margin_bottom = 169.951

[node name="Quit" type="Button" parent="Gameover/Quit"]
margin_left = 189.0
margin_top = 29.0
margin_right = 254.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
flat = true

[node name="Winner" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = -222.0
margin_right = 361.0
margin_bottom = 222.0

[node name="Conquered2" type="CenterContainer" parent="Winner"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = -137.448
margin_right = 247.819
margin_bottom = -41.448

[node name="Winner" type="Label" parent="Winner/Conquered2"]
margin_right = 478.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "conquered!"

[node name="Continue" type="CenterContainer" parent="Winner"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = -22.8911
margin_right = 213.819
margin_bottom = 73.1089

[node name="ContinueButton" type="Button" parent="Winner/Continue"]
margin_left = 157.0
margin_top = 28.0
margin_right = 286.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "CONtinue"
flat = true

[node name="Restart" type="CenterContainer" parent="Winner"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = 26.7109
margin_right = 213.819
margin_bottom = 122.711

[node name="Restart" type="Button" parent="Winner/Restart"]
margin_left = 159.0
margin_top = 29.0
margin_right = 283.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
flat = true

[node name="Quit" type="CenterContainer" parent="Winner"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.181
margin_top = 73.9509
margin_right = 213.819
margin_bottom = 169.951

[node name="Restart" type="Button" parent="Winner/Quit"]
margin_left = 189.0
margin_top = 29.0
margin_right = 254.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
flat = true

[node name="Star" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.0
margin_top = 34.483
margin_right = 131.0
margin_bottom = 66.483
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.67451, 0.67451, 0.67451, 1 )
value = 23.0

[node name="DiamondAdded" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -19.1318
margin_top = 76.3966
margin_right = 20.8682
margin_bottom = 90.3966
text = "56"
align = 1
[connection signal="pressed" from="Gameover/Restart/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Gameover/Mainmenu/Mainmenu" to="." method="_on_Mainmenu_pressed"]
[connection signal="pressed" from="Gameover/Quit/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Winner/Continue/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Winner/Restart/Restart" to="." method="_on_Restart_pressed"]
